manifests/base/CI-failure-prediction-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api-deployment
  labels:
    app: app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-api
  template:
    metadata:
      labels:
        app: app-api
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: app-api-container
          image: harbor.th1enlm02.live/production/ci-failure-prediction-app:4ec3824-1750698956 # {"$imagepolicy": "production:app-api-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "150m"
              memory: "100Mi"
            limits:
              cpu: "300m"
              memory: "200Mi"
