manifests/base/CI-failure-prediction-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-api-service
spec:
  selector:
    app: app-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
