manifests/base/CI-failure-prediction-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app-api.th1enlm02.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-api-service
              port:
                number: 5000
